--- a/tasks/ext_roles.yml
+++ b/tasks/ext_roles.yml
@@ -42,7 +42,7 @@
     regexp: "(^{{ item }}.*)"
     replace: '#\1'
   with_items:
-    - "DatabaseDirectory"
+    - "DatabaseMirror"
   when: clamav_offlinedb
   tags:
     - ext_roles
