--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,9 @@ chkrootkit: true
 unhide: true
 shelldetector: false
 
+# create new aide database?
+aide_db_renew: false
+
 # print statistics of vulnerabilies in executable binaries - time expensive!
 compiling_summaries: no
 
