removing synced database

--- a/tasks/scanners.yml
+++ b/tasks/scanners.yml
@@ -17,6 +17,13 @@
     dest: /var/lib/aide/aide.db
     backup: true
     remote_src: true
-  #when: not aide_db.stat.exists or aide_db_renew
+  when: not aide_db.stat.exists or aide_db_renew
+  tags:
+    - aide
+
+- name: AIDE - remove duplicated database
+  file:
+    path: /var/lib/aide/aide.db.new
+    state: absent
   tags:
     - aide
