--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -303,6 +303,7 @@
         prompt: "{{ summary_compiling_check.stdout_lines }}"
         seconds: 2
   when: compiling_summaries
+  tags:
     - summary-compiling-check
 
 - name: run queued handlers
