--- a/handlers/dconf_update.yml
+++ b/handlers/dconf_update.yml
@@ -1,6 +1,6 @@
 - block:
     - name: dconf - update configs
-      shell: dconf update
+      ansible.builtin.shell: dconf update
 
     - name: dconf - correct permissions of local db
-      shell: chmod go+r /etc/dconf/db/local
+      ansible.builtin.shell: chmod go+r /etc/dconf/db/local
