--- a/tasks/sub_permissions.yml
+++ b/tasks/sub_permissions.yml
@@ -1,7 +1,7 @@
 - name: more restrictive file permissions
   block:
     - name: set file permissions
-      file:
+      ansible.builtin.file:
         path: "{{ file_path }}"
         owner: "{{ file_owner }}"
         group: "{{ file_group }}"
