--- a/handlers/reboot.yml
+++ b/handlers/reboot.yml
@@ -5,5 +5,5 @@
     reboot_timeout: 600
     pre_reboot_delay: 0
     post_reboot_delay: 30
-    test_command: echo
+    test_ansible.builtin.command: echo
   when: not skip_reboots
