--- a/tasks/network.yml
+++ b/tasks/network.yml
@@ -1,19 +1,19 @@
 - name: dns - speed up ssh sessions without avahi
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/nsswitch.conf
     regexp: "hosts:"
     line: "hosts:          files dns"
     state: present
 
 - name: sysctl-network - check for existent config file
-  stat:
+  ansible.builtin.stat:
     path: /etc/sysctl.d/98-sec-net.conf
   register: sysctl_network
 
 - name: harden network devices
   block:
     - name: create a virgin configfile
-      file:
+      ansible.builtin.file:
         path: /etc/sysctl.d/98-sec-net.conf
         mode: 644
         owner: root
@@ -21,143 +21,143 @@
         state: touch
 
     - name: sysctl-network - get relevant sysctl entries - ip_forward
-      shell: sysctl -aN --pattern ip_forward
+      ansible.builtin.shell: sysctl -aN --pattern ip_forward
       register: ip_forward
 
     - name: sysctl-network - write rules to config - ip_forward
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ ip_forward.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - mc_forwarding
-      shell: sysctl -aN --pattern mc_forwarding
+      ansible.builtin.shell: sysctl -aN --pattern mc_forwarding
       register: mc_forwarding
 
     - name: sysctl-network - write rules to config - mc_forwarding
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ mc_forwarding.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - send_redirects
-      shell: sysctl -aN --pattern send_redirects
+      ansible.builtin.shell: sysctl -aN --pattern send_redirects
       register: send_redirects
 
     - name: sysctl-network - write rules to config - send_redirects
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ send_redirects.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - accept_source_route
-      shell: sysctl -aN --pattern accept_source_route
+      ansible.builtin.shell: sysctl -aN --pattern accept_source_route
       register: accept_source_route
 
     - name: sysctl-network - write rules to config - accept_source_route
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ accept_source_route.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - accept_redirects
-      shell: sysctl -aN --pattern accept_redirects
+      ansible.builtin.shell: sysctl -aN --pattern accept_redirects
       register: accept_redirects
 
     - name: sysctl-network - write rules to config - accept_redirects
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ accept_redirects.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - secure_redirects
-      shell: sysctl -aN --pattern secure_redirects
+      ansible.builtin.shell: sysctl -aN --pattern secure_redirects
       register: secure_redirects
 
     - name: sysctl-network - write rules to config - secure_redirects
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ secure_redirects.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - accept_ra
-      shell: sysctl -aN --pattern accept_ra
+      ansible.builtin.shell: sysctl -aN --pattern accept_ra
       register: accept_ra
 
     - name: sysctl-network - write rules to config - accept_ra
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 0"
         state: present
       loop: "{{ accept_ra.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - disable_ipv6
-      shell: sysctl -aN --pattern disable_ipv6
+      ansible.builtin.shell: sysctl -aN --pattern disable_ipv6
       register: disable_ipv6
 
     - name: sysctl-network - write rules to config - disable_ipv6
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 1"
         state: present
       loop: "{{ disable_ipv6.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - rp_filter
-      shell: sysctl -aN --pattern rp_filter
+      ansible.builtin.shell: sysctl -aN --pattern rp_filter
       register: rp_filter
 
     - name: sysctl-network - write rules to config - rp_filter
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 1"
         state: present
       loop: "{{ rp_filter.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - tcp_syncookies
-      shell: sysctl -aN --pattern tcp_syncookies
+      ansible.builtin.shell: sysctl -aN --pattern tcp_syncookies
       register: tcp_syncookies
 
     - name: sysctl-network - write rules to config - tcp_syncookies
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 1"
         state: present
       loop: "{{ tcp_syncookies.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - icmp_echo_ignore_broadcasts
-      shell: sysctl -aN --pattern icmp_echo_ignore_broadcasts
+      ansible.builtin.shell: sysctl -aN --pattern icmp_echo_ignore_broadcasts
       register: icmp_echo_ignore_broadcasts
 
     - name: sysctl-network - write rules to config - icmp_echo_ignore_broadcasts
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 1"
         state: present
       loop: "{{ icmp_echo_ignore_broadcasts.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - tcp_rfc1337
-      shell: sysctl -aN --pattern tcp_rfc1337
+      ansible.builtin.shell: sysctl -aN --pattern tcp_rfc1337
       register: tcp_rfc1337
 
     - name: sysctl-network - write rules to config - tcp_rfc1337
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 1"
         state: present
       loop: "{{ tcp_rfc1337.stdout_lines }}"
 
     - name: sysctl-network - get relevant sysctl entries - icmp_ignore_bogus_error_responses
-      shell: sysctl -aN --pattern icmp_ignore_bogus_error_responses
+      ansible.builtin.shell: sysctl -aN --pattern icmp_ignore_bogus_error_responses
       register: icmp_ignore_bogus_error_responses
 
     - name: sysctl-network - write rules to config - icmp_ignore_bogus_error_responses
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/sysctl.d/98-sec-net.conf
         line: "{{ item }} = 1"
         state: present
@@ -168,12 +168,12 @@
 - name: disable ipv6
   block:
     - name: boot-option - check if ipv6 is already disabled
-      shell: grep GRUB_CMDLINE_LINUX_DEFAULT /etc/default/grub | grep -c "ipv6.disable=1"
+      ansible.builtin.shell: grep GRUB_CMDLINE_LINUX_DEFAULT /etc/default/grub | grep -c "ipv6.disable=1"
       register: boot_ipv6_status
       ignore_errors: true
 
     - name: boot-option - disable ipv6
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "/etc/default/grub"
         regexp: 'GRUB_CMDLINE_LINUX_DEFAULT="(.*)"'
         line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 ipv6.disable=1"'
@@ -181,38 +181,38 @@
       when: boot_ipv6_status.stdout == "0"
 
     - name: update-grub
-      shell: update-grub
+      ansible.builtin.shell: update-grub
       when: boot_ipv6_status.stdout == "0"
 
 - name: firewall - disable dhcp and icmp
   block:
     - name: firewall - disable icmp destination-unreachable
-      replace:
+      ansible.builtin.replace:
         path: /etc/ufw/before.rules
         regexp: "(^-A ufw-before-input -p icmp --icmp-type destination-unreachable -j )(.*)$"
-        replace: '\1DROP'
+        ansible.builtin.replace: '\1DROP'
 
     - name: firewall - disable icmp time-exceeded
-      replace:
+      ansible.builtin.replace:
         path: /etc/ufw/before.rules
         regexp: "(^-A ufw-before-input -p icmp --icmp-type time-exceeded -j )(.*)$"
-        replace: '\1DROP'
+        ansible.builtin.replace: '\1DROP'
 
     - name: firewall - disable icmp parameter-problem
-      replace:
+      ansible.builtin.replace:
         path: /etc/ufw/before.rules
         regexp: "(^-A ufw-before-input -p icmp --icmp-type parameter-problem -j )(.*)$"
-        replace: '\1DROP'
+        ansible.builtin.replace: '\1DROP'
 
     - name: firewall - disable icmp echo-request
-      replace:
+      ansible.builtin.replace:
         path: /etc/ufw/before.rules
         regexp: "(^-A ufw-before-input -p icmp --icmp-type echo-request -j )(.*)$"
-        replace: '\1DROP'
+        ansible.builtin.replace: '\1DROP'
 
     - name: firewall - block dhcp client
-      replace:
+      ansible.builtin.replace:
         path: /etc/ufw/before.rules
         regexp: "(^-A ufw-before-input -p udp --sport 67 --dport 68 -j )(.*)$"
-        replace: '\1DROP'
+        ansible.builtin.replace: '\1DROP'
   when: set_firewall
