--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -1,29 +1,29 @@
 - name: restrict playbook for debian based distributions
   block:
     - name: "End play"
-      debug:
+      ansible.builtin.debug:
         msg: "Target system isn't debian based ... exit"
     - meta: end_play
   when: ansible_facts['os_family'] != "Debian"
 
 - name: init variable os_type
-  set_fact:
+  ansible.builtin.set_fact:
     os_type: ""
 
 - name: get ubuntu distribution type
   block:
     - name: looking for desktop installation
-      shell: apt list --installed |grep gnome-desktop
+      ansible.builtin.shell: apt list --installed |grep gnome-desktop
       register: search_desktop
       ignore_errors: true
 
     - name: set os-type - desktop
-      set_fact:
+      ansible.builtin.set_fact:
         os_type: desktop
       when: search_desktop.stdout_lines is search("gnome-desktop")
 
     - name: set os-type - server
-      set_fact:
+      ansible.builtin.set_fact:
         os_type: server
       when: search_desktop.stdout_lines is not search("gnome-desktop")
 
