--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -1,7 +1,7 @@
 - name: dconf - loginscreen - hide userlist
   block:
     - name: dconf - modify greeter settings
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /usr/share/gdm/greeter.dconf-defaults
         regexp: '(^|^# ){{ item.key }}\='
         line: "{{ item.key }}={{ item.value }}"
@@ -10,13 +10,13 @@
         - key: "disable-user-list"
           value: "true"
     - name: dconf - apply modified greeter config
-      shell: "dpkg-reconfigure gdm3"
+      ansible.builtin.shell: "dpkg-reconfigure gdm3"
   when: remove_login_userlist
   tags:
     - system_hide_userlist
 
 - name: gdm - disable xdmcp
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/gdm3/custom.conf
     regexp: '(^|^#  )Enable\='
     line: "Enable=false"
@@ -26,7 +26,7 @@
     - gdm_disable_xdmp
 
 - name: prevent automount - remove autofs
-  apt:
+  ansible.builtin.apt:
     pkg:
       - autofs
     state: absent
@@ -36,14 +36,14 @@
 - name: usbauth - limit usage of usb devices
   block:
     - name: usbauth - install
-      apt:
+      ansible.builtin.apt:
         pkg:
           - usbauth
         state: present
         update_cache: yes
 
     - name: usbauth - deploy config
-      copy:
+      ansible.builtin.copy:
         src: usbauth.conf
         dest: /etc/
         force: yes
@@ -52,12 +52,12 @@
         mode: 0644
 
     - name: usbauth - init
-      shell: usbauth init
+      ansible.builtin.shell: usbauth init
 
 - name: apparmor
   block:
     - name: apparmor - install
-      apt:
+      ansible.builtin.apt:
         pkg:
           - apparmor-utils
           - apparmor-profiles
@@ -66,38 +66,38 @@
         update_cache: yes
 
     - name: apparmor - check for existing firefox-esr
-      stat:
+      ansible.builtin.stat:
         path: /etc/apparmor.d/abstractions/ubuntu-browsers.d/firefox-esr
       register: firefox_esr
 
     - name: apparmor - create symlinks for firefox-esr - abstractions
-      file:
+      ansible.builtin.file:
         src: /etc/apparmor.d/abstractions/ubuntu-browsers.d/firefox-esr
         dest: /etc/apparmor.d/abstractions/ubuntu-browsers.d/firefox
         state: link
       when: firefox_esr.stat.exists
 
     - name: apparmor - create symlinks for firefox-esr - binary
-      file:
+      ansible.builtin.file:
         src: /etc/apparmor.d/local/usr.bin.firefox-esr
         dest: /etc/apparmor.d/local/usr.bin.firefox
         state: link
       when: firefox_esr.stat.exists
 
     - name: apparmor - activate profiles
-      shell: aa-enforce /etc/apparmor.d/*
+      ansible.builtin.shell: aa-enforce /etc/apparmor.d/*
   tags:
     - apparmor
 
 - name: apparmor - bootloader
   block:
     - name: boot-option - check if security=apparmor is already disabled
-      shell: grep GRUB_CMDLINE_LINUX_DEFAULT /etc/default/grub | grep -c "apparmor=1"
+      ansible.builtin.shell: grep GRUB_CMDLINE_LINUX_DEFAULT /etc/default/grub | grep -c "apparmor=1"
       register: boot_apparmor_enabled
       ignore_errors: true
 
     - name: boot-option - enable apparmor
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "/etc/default/grub"
         regexp: 'GRUB_CMDLINE_LINUX_DEFAULT="(.*)"'
         line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 apparmor=1"'
@@ -105,12 +105,12 @@
       when: boot_apparmor_enabled.stdout == "0"
       
     - name: boot-option - check if security=apparmor is already disabled
-      shell: grep GRUB_CMDLINE_LINUX_DEFAULT /etc/default/grub | grep -c "security=apparmor"
+      ansible.builtin.shell: grep GRUB_CMDLINE_LINUX_DEFAULT /etc/default/grub | grep -c "security=apparmor"
       register: boot_security_apparmor
       ignore_errors: true
 
     - name: boot-option - set security=apparmor
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "/etc/default/grub"
         regexp: 'GRUB_CMDLINE_LINUX_DEFAULT="(.*)"'
         line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 security=apparmor"'
@@ -118,7 +118,7 @@
       when: boot_security_apparmor.stdout == "0"
 
     - name: update-grub
-      shell: update-grub
+      ansible.builtin.shell: update-grub
       when: boot_security_apparmor.stdout == "0" or boot_apparmor_enabled.stdout == "0"
       #notify: reboot system
   tags:
@@ -128,7 +128,7 @@
 - name: more restrictive file permissions ...
   block:
     - name: more restrictive file permissions (1/7)
-      include_tasks: sub_permissions.yml
+      ansible.builtin.include_tasks: sub_permissions.yml
       vars:
         file_path: "{{ item }}"
         file_owner: "root"
@@ -145,14 +145,14 @@
         - /etc/ssh/sshd_config
 
     - name: more restrictive file permissions (2/7)
-      file:
+      ansible.builtin.file:
         path: "/etc/group"
         owner: root
         group: root
         mode: 644
 
     - name: more restrictive file permissions (3/7)
-      include_tasks: sub_permissions.yml
+      ansible.builtin.include_tasks: sub_permissions.yml
       vars:
         file_path: "{{ item }}"
         file_owner: "root"
@@ -167,7 +167,7 @@
         - /etc/group-
 
     - name: more restrictive file permissions (4/7)
-      include_tasks: sub_permissions.yml
+      ansible.builtin.include_tasks: sub_permissions.yml
       vars:
         file_path: "{{ item }}"
         file_owner: "root"
@@ -178,7 +178,7 @@
         - /etc/gshadow
 
     - name: more restrictive file permissions (5/7)
-      include_tasks: sub_permissions.yml
+      ansible.builtin.include_tasks: sub_permissions.yml
       vars:
         file_path: "{{ item }}"
         file_owner: "root"
@@ -189,7 +189,7 @@
         - /etc/gshadow~
 
     - name: determine host key files
-      find:
+      ansible.builtin.find:
         paths: /etc/ssh
         patterns: "ssh_host_*_key"
         use_regex: yes
@@ -197,7 +197,7 @@
       register: host_keys
 
     - name: more restrictive file permissions (6/7)
-      file:
+      ansible.builtin.file:
         path: "{{ item.path }}"
         owner: root
         group: root
@@ -205,7 +205,7 @@
       with_items: "{{ host_keys.files }}"
 
     - name: determine host public key files
-      find:
+      ansible.builtin.find:
         paths: /etc/ssh
         patterns: "ssh_host_*_key.pub"
         use_regex: yes
@@ -213,7 +213,7 @@
       register: host_pub_keys
 
     - name: more restrictive file permissions (7/7)
-      file:
+      ansible.builtin.file:
         path: "{{ item.path }}"
         owner: root
         group: root
@@ -223,7 +223,7 @@
 - name: cron & at
   block:
     - name: cron & at - prevent blacklisting
-      file:
+      ansible.builtin.file:
         path: "{{ item }}"
         state: absent
       with_items:
@@ -231,7 +231,7 @@
         - /etc/at.deny
 
     - name: cron & at - enable whitelisting
-      file:
+      ansible.builtin.file:
         path: "{{ item }}"
         state: touch
         owner: root
@@ -244,7 +244,7 @@
 - name: syslogs
   block:
     - name: jounald - configure
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/systemd/journald.conf
         regexp: "(^|^#){{ item.key }}"
         line: "{{ item.key }}={{ item.value }}"
@@ -258,15 +258,15 @@
           value: "yes"
 
     - name: journald - remove logs
-      file:
+      ansible.builtin.file:
         path: /var/log/journal
         state: absent
 
     - name: journald - restart daemon
-      shell: "systemctl restart *journald.service"
+      ansible.builtin.shell: "systemctl restart *journald.service"
 
     - name: syslog - check/set config
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: /etc/rsyslog.conf
         regexp: "^{{ item.key }}"
         line: "{{ item.key }} {{ item.value }}"
@@ -284,7 +284,7 @@
     - syslogs
 
 - name: empty issue files
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "{{ item }}"
     regexp: ".*"
     state: absent
