--- a/tasks/logins.yml
+++ b/tasks/logins.yml
@@ -351,7 +351,7 @@
       ansible.builtin.replace:
         path: /etc/ssh/sshd_config
         regexp: "^({{ item }}.*)"
-        ansible.builtin.replace: '#\1'
+        replace: '#\1'
       with_items:
         - "Banner"
         - "PrintLastLog"
