fix: harmonize usage of nexus flag

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 skip_reboots: true
 
 ## nexus cashed package proxy
-use_nexus: yes
+nexus: yes
 nexusIP: "192.168.123.180"
 nexusPort: "8081"
 nexusProto: "http"
